Fix name format on mobile

--- a/index.css
+++ b/index.css
@@ -674,3 +674,26 @@ body:not(.user-is-tabbing) a:focus {
     } 
 }
 
+@media (max-width: 600px) {
+  .header__text-box {
+    text-align: center;
+  }
+
+  .header__text {
+    align-items: center;
+  }
+
+  .heading-primary {
+    text-align: center;
+  }
+
+  .header__text p {
+    text-align: center;
+  }
+}
+@media (max-width: 600px) {
+  .header__text .btn {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
